--- a/checkeng/dialogs/test1/test1.ui
+++ b/checkeng/dialogs/test1/test1.ui
@@ -102,7 +102,7 @@
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(243, 243, 243);</string>
+      <string notr="true"/>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -150,7 +150,7 @@
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(243, 243, 243);</string>
+      <string notr="true"/>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -195,7 +195,7 @@
       <bool>false</bool>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(243, 243, 243);</string>
+      <string notr="true">);</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
